All images display: block by default to avoid layout issues

--- a/app/styles/_reset.sass
+++ b/app/styles/_reset.sass
@@ -31,3 +31,4 @@ ol
 img
   width: 100%
   height: auto
+  display: block
